--- a/slide-folder/assignment_1.Rmd
+++ b/slide-folder/assignment_1.Rmd
@@ -8,7 +8,6 @@ output:
     lib_dir: libs
     nature:
       titleSlideClass: ["left", "middle", "inverse"]
-      ratio: "16:9"
       highlightStyle: github
       highlightLines: true
       countIncrementalSlides: false
@@ -62,11 +61,11 @@ class: text-slide
 
 # Analytical Solution
 
-Several models will be deployed that provide probabilistic outcomes for patients around readmission, follow-up, and optimal patient care:
+Several models will be deployed that provide probabilistic outcomes for patients around re-admission, follow-up, and optimal patient care:
 
 --
 
-* A prediction score for patient readmission prior to admission
+* A prediction score for patient re-admission prior to admission
 --
 
 * A prediction score for readmission as patient receives care at the hospital
