--- a/slide-content/assignment_1.Rmd
+++ b/slide-content/assignment_1.Rmd
@@ -18,11 +18,26 @@ options(htmltools.dir.version = FALSE)
 knitr::opts_chunk$set(fig.retina = 3, warning = FALSE, message = FALSE)
 library(tidyverse)
 library(knitr)
+library(xaringan)
+```
 
+```{r eval=FALSE, include=FALSE}
 # Convert to PDF not working dimensionally
 # library(webshot)
 # file_name <- paste0("file://", normalizePath("slide-folder/assignment_1.html"))
 # webshot(file_name, "assignment_1.pdf")
+
+xaringan::decktape(file = "./slide-content/assignment_1.html", output = "assignment_1.pdf")
+
+# https://github.com/astefanutti/decktape
+# Convert deployed slides
+system("docker run --rm -t -v `pwd`:/slides astefanutti/decktape https://goldbergdata.github.io/Big-Data-Platforms/#1 assignment_1.pdf")
+
+# Convert local slides
+system("docker run --rm -t -v `pwd`:/slides -v ~:/home/user astefanutti/decktape /home/user/slides.html slides.pdf")
+
+# Local hosted file
+system("docker run --rm -t --net=host -v `pwd`:/slides astefanutti/decktape http://localhost:8000 slides.pdf")
 ```
 
 class: text-slide, main-slide, center, middle
@@ -167,4 +182,4 @@ class: last-slide, center
 
 <h1 style="text-align: left;"> Architecture Diagram</h1>
 
-![](Copy of Big Data Architecture.svg)
+![](big-data-architecture.svg)
